@@ -1,3 +1,15 @@
+2010-12-10  Patrick Gansterer  <paroga@webkit.org>
+
+        Reviewed by Eric Seidel.
+
+        Cleanup StringWx.cpp
+        https://bugs.webkit.org/show_bug.cgi?id=50525
+
+        Use StringImpl::createUninitialized to avoid memcpy and fix style issues.
+
+        * wtf/wx/StringWx.cpp:
+        (WTF::String::String):
+
 2010-12-10  Carlos Garcia Campos  <cgarcia@igalia.com>
 
         Reviewed by Martin Robinson.
